[package]
name = "max30205"
version = "0.2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/max30205"
documentation = "https://docs.rs/max30205"
description = """
A driver for the MAX30205 temperature sensor communicating over I2C.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
